[project]
name = "viginyx-backend"
version = "0.1.0"
description = "FastAPI backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.111.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.21",
    "psycopg[binary]>=3.2.1",
    "passlib[bcrypt]>=1.7.4",
    "PyJWT>=2.8.0",
    "langchain-google-genai>=1.0.0",
    "webauthn>=2.7.1",
    "psycopg-pool>=3.3.1",
    "langchain>=1.3.9",
    "langchain-openai>=1.3.2",
    "langchain-xai>=1.2.2",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-postgres>=3.1.0",
    "redis>=8.0.1",
]

[tool.fastapi]
entrypoint = "api.main:app"
